--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.0",
