--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
     "next": "15.5.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sass": "^1.90.0"
+  },
+  "devDependencies": {
+    "@types/node": "24.3.1",
+    "typescript": "5.9.2"
   }
 }
